# rust-langgraph

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md
examples/: 01_simple_graph.rs  02_conditional_edges.rs  03_checkpointing.rs  04_streaming.rs  05_ollama_chat.rs  06_react_agent_ollama.rs  07_openrouter_chat.rs  08_custom_state.rs
src/: config.rs  errors.rs  lib.rs  nodes.rs  runtime.rs  state.rs  types.rs
src/channels/: binop.rs  ephemeral.rs  last_value.rs  mod.rs  topic.rs
src/checkpoint/: mod.rs
src/checkpoint_backends/: memory.rs  mod.rs  postgres.rs  sqlite.rs
src/graph/: mod.rs  state_graph.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/prebuilt/: mod.rs  react_agent.rs  tool.rs  validation.rs
src/pregel/: branch.rs  engine.rs  mod.rs
tests/: test_ollama_integration.rs
