[package]
name = "rust-langgraph"
version = "0.1.0"
edition = "2021"
authors = ["Rust LangGraph contributors"]
description = "Rust LangGraph — a community graph runtime for LLM agents, inspired by LangGraph (not affiliated with LangChain). Build stateful, multi-actor workflows in Rust."
license = "MIT"
repository = "https://github.com/yourusername/rust-langgraph"
keywords = ["rust-langgraph", "langgraph", "llm", "agent", "graph", "workflow"]
categories = ["asynchronous", "web-programming"]
readme = "README.md"

[features]
default = ["memory-checkpoint"]
memory-checkpoint = []
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio"]
postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio"]
openai = ["dep:reqwest", "dep:async-openai"]
anthropic = ["dep:reqwest"]
ollama = ["dep:reqwest"]
prebuilt = []

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID generation for checkpoints
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Optional database support
sqlx = { version = "0.8", optional = true, features = ["json"] }

# Optional HTTP client for LLM providers
reqwest = { version = "0.12", optional = true, features = ["json"] }
async-openai = { version = "0.24", optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"

[lib]
name = "rust_langgraph"
path = "src/lib.rs"

[[example]]
name = "simple_graph"
path = "examples/01_simple_graph.rs"

[[example]]
name = "conditional_edges"
path = "examples/02_conditional_edges.rs"

[[example]]
name = "checkpointing"
path = "examples/03_checkpointing.rs"

[[example]]
name = "streaming"
path = "examples/04_streaming.rs"

[[example]]
name = "ollama_chat"
path = "examples/05_ollama_chat.rs"
required-features = ["ollama"]

[[example]]
name = "react_agent_ollama"
path = "examples/06_react_agent_ollama.rs"
required-features = ["ollama", "prebuilt"]

[[example]]
name = "custom_state"
path = "examples/08_custom_state.rs"

